Update CSS to prevent zooming on input focus on iOS.

--- a/client/src/components/DeckBuilderSearch/DeckBuilderSearch.scss
+++ b/client/src/components/DeckBuilderSearch/DeckBuilderSearch.scss
@@ -21,7 +21,7 @@
         padding: 0.75rem 1.5rem;
 
         @media only screen and (max-width: 37.5em) {
-            font-size: 1.4rem;
+            font-size: 1.6rem;
             padding: 0.5rem 1rem;
             margin: 0.5rem;
         }
