--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -44,7 +44,7 @@
         height: 3rem;
         border-radius: var(--border-radius);
         border: var(--line);
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         padding: 0 0.5rem;
 
         @media only screen and (max-width: 37.5em) {
