--- a/client/src/pages/AdvancedSearch/AdvancedSearch.scss
+++ b/client/src/pages/AdvancedSearch/AdvancedSearch.scss
@@ -48,7 +48,6 @@
         }
 
         @media only screen and (max-width: 52.125em) {
-            font-size: 1.4rem;
             padding: 0.75rem;
         }
     }
@@ -65,10 +64,9 @@
     }
 
     &-select {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
 
         @media only screen and (max-width: 52.125em) {
-            font-size: 1.4rem;
             padding: 0.75rem 3rem 0.75rem 0.75rem;
         }
     }
