--- a/client/src/pages/DeckBuilder/DeckBuilder.scss
+++ b/client/src/pages/DeckBuilder/DeckBuilder.scss
@@ -36,8 +36,8 @@
             flex: 1;
             max-width: none;
             width: 100%;
-            max-height: 30vh;
-            height: 30vh;
+            max-height: 35vh;
+            height: 35vh;
             border-left: none;
         }
 
